# osm_city_pipeline

./: .gitignore  CENTER_SPAWNING.md  CENTRAL_SPAWN_NEAR_BUILDINGS.md  COMPLETE_TEST_RESULTS.md  ENHANCED_GENERATION.md  FINAL_SPAWNING_INSTRUCTIONS.md  GAZEBO_LAUNCH.md  IMPROVEMENTS_SUMMARY.md  MULTI_STREET_TEST_RESULTS.md  QUICK_START_VISUAL.md  README.md  ROBOT_SPAWNING_GUIDE.md  SPAWNING_GUIDE.md  TROUBLESHOOTING.md  VERIFY_CENTER_SPAWN.md  VISUAL_SPAWNING_GUIDE.md  WORKFLOW_TESTED.md  compose.yaml  generate_city.py
config/: enhanced.properties  map_config.yaml  pipeline_config.yaml
docker/: Dockerfile  entrypoint.sh
maps/: bari.osm  bari_roads.json  bari_spawn_points.yaml
saye_description/: CMakeLists.txt
saye_description/models/saye/: model.config
saye_description/urdf/: saye.urdf
scripts/: convert_with_osm2world.sh  create_test_spawn_sdf.py  find_center_streets.py  find_central_street_near_buildings.py  generate_enhanced_world.sh  generate_world.sh  get_street_spawn_points.py  launch_gazebo.sh  osm-city  reset_world.sh  spawn_and_view.sh  spawn_on_street.py  spawn_on_street.sh  spawn_robot_and_view.sh  spawn_robot_center.sh  spawn_robot_on_street.py  test_inside_container.sh  test_multi_street_spawning.sh  test_on_host.sh  test_phases_1_2.sh  test_robot_multi_street.sh  test_robot_visibility.sh  test_street_coordinates.py  verify_spawn_point.py
tests/: README.md  test_on_host.sh  test_phase_3.sh  test_phase_4.sh  test_phase_5.sh  test_phases_1_2.sh
tools/: add_obj_normals.py
world/: city.world
worlds/: bari.sdf  robot_Alessndro.sdf  (+19 more)
(+14 files in other folders)
